2001-08-11  Martin Baulig  <baulig@suse.de>

	* gnome-geometry.[ch]: Moved to libgnome1compat/libgnomeui.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* gnome-unit-spinner.[ch]: Removed.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Don't install gnome-macros.h.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* gtkrc*: Removed.

	* landscape.xpm, portrait.xpm: Removed.
	
2001-08-11  Martin Baulig  <baulig@suse.de>

	* gnome-rexec-server.oafinfo: Removed.

	* gnome-remote-bootstrap.c: Removed.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* wap-textfu.[ch]: Removed.

	* gnome-ditem-edit.[ch]: Removed.

2001-08-11  Martin Baulig  <baulig@suse.de>

	* gnome-icon-item.[ch]: Removed.
	* gnome-icon-text.[ch]: Removed.

	* gnome-icon-list.c: Use the new GnomeCanvasRichText.
	(FIXME: Incomplete).

2001-08-11  Martin Baulig  <baulig@suse.de>

	* oafgnome.[ch]: Removed.

2001-08-09  Michael Meeks  <michael@ximian.com>

	* gnome-paper-selector.[ch]: Kill, now in libgnomeprintui.

2001-08-07  Darin Adler  <darin@bentspoon.com>

	* oafgnome.c: Remove unnecessary includes of now-nonexistent
	headers to make things compile.

2001-08-07  Michael Meeks  <michael@ximian.com>

	* oafgnome.c: mostly port to gnome 2.0 and bonobo-activation.

2001-08-06  Darin Adler  <darin@bentspoon.com>

	* gnome-remote-bootstrap.c:
	* libgnomeui.h:
	A couple more places where gnome-init.h needs to be changed
	to gnome-ui-init.h.

2001-08-06  Peter Williams  <peterw@ximian.com>

	* Makefile.am, gnome-ui-init.c, gnome-window.c: Track the
	rename of gnome-init.c to gnome-ui-init.c

2001-08-01  Anders Carlsson  <andersca@codefactory.se>

	* gnome-about.c: Empty stub for API functions until I
	can check in the real implementation.

	* gnome-about.h: Add new API since it's July 32nd today :)

2001-08-01  Michael Meeks  <michael@ximian.com>

	* oafgnome.h: port to bonobo-activation.

	* oafgnome.c (og_pre_args_parse): upd.

	* gnome-rexec-server.c: stale, removed.
